// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ShiftviewPopover > renders correctly 1`] = `
<div
  class="shiftview-popover rounded bg-primary-dark pa-4"
  data-v-1c92b49f=""
  style="left: 0px; top: 0px; max-width: 400px;"
>
  <div
    class="d-flex"
    data-v-1c92b49f=""
    id="popover-header"
  >
    <evocon-v-button-stub
      class="my-auto"
      color="white"
      data-v-1c92b49f=""
      disabled="false"
      icon="M15.41,16.58L10.83,12L15.41,7.41L14,6L8,12L14,18L15.41,16.58Z"
      iconcolor=""
      id="left-arrow"
      size="default"
      text=""
      textclass=""
      type="primary"
    />
    <div
      class="mx-3"
      data-v-1c92b49f=""
    >
      <i
        aria-hidden="true"
        class="v-icon notranslate v-theme--light text-purple mr-1"
        data-v-1c92b49f=""
        id="popover-dot"
        style="font-size: 8px; height: 8px; width: 8px;"
      >
        <svg
          aria-hidden="true"
          class="v-icon__svg"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
          />
        </svg>
      </i>
      <span
        class="text-body-medium"
        data-v-1c92b49f=""
      >
        <span
          data-v-1c92b49f=""
          id="subtitle"
        >
          popover subtitle
        </span>
      </span>
      <p
        class="mb-0 line-clamp-3"
        data-v-1c92b49f=""
        id="popover-title"
      >
        <i
          aria-hidden="true"
          class="v-icon notranslate v-theme--light text-icon-default mr-1"
          data-v-1c92b49f=""
          style="font-size: 16px; height: 16px; width: 16px;"
        >
          <svg
            aria-hidden="true"
            class="v-icon__svg"
            role="img"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3.9,12C3.9,10.29 5.29,8.9 7,8.9H11V7H7A5,5 0 0,0 2,12A5,5 0 0,0 7,17H11V15.1H7C5.29,15.1 3.9,13.71 3.9,12M8,13H16V11H8V13M17,7H13V8.9H17C18.71,8.9 20.1,10.29 20.1,12C20.1,13.71 18.71,15.1 17,15.1H13V17H17A5,5 0 0,0 22,12A5,5 0 0,0 17,7Z"
            />
          </svg>
        </i>
         popover title
      </p>
    </div>
    <evocon-v-button-stub
      class="my-auto ml-auto mr-0"
      color="white"
      data-v-1c92b49f=""
      disabled="false"
      icon="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z"
      iconcolor=""
      id="right-arrow"
      size="default"
      text=""
      textclass=""
      type="primary"
    />
  </div>
  
  
  <hr
    aria-orientation="horizontal"
    class="v-divider v-theme--light text-tertiary-dark my-2"
    data-v-1c92b49f=""
    role="separator"
    style="border-style: solid;"
  />
  <div
    class="shifview-popover-actions-list"
    data-v-1c92b49f=""
  >
    
    <div
      class="v-list-item v-list-item--link v-theme--light v-list-item--density-default rounded-0 v-list-item--variant-text px-3 popover-menu-item rounded overflow-hidden list-item--flex"
      data-v-1c92b49f=""
      style="min-height: 48px;"
      tabindex="0"
    >
      
      <span
        class="v-list-item__overlay"
      />
      <span
        class="v-list-item__underlay"
      />
      
      <!---->
      <div
        class="v-list-item__content"
        data-no-activator=""
      >
        <!---->
        <!---->
        
        
        
        <div
          aria-describedby="v-tooltip-v-0"
          class="d-flex full-width align-center"
          data-v-1c92b49f=""
        >
          <i
            aria-hidden="true"
            class="v-icon notranslate v-theme--light text-red mr-5 item-icon"
            data-v-1c92b49f=""
            style="font-size: 24px; height: 24px; width: 24px;"
          >
            <svg
              aria-hidden="true"
              class="v-icon__svg"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5 5H7V11H5V5M10 5H8V11H10V5M5 19H7V13H5V19M10 13H8V19H10V17H15V15H10V13M2 21H4V3H2V21M20 3V7H13V5H11V11H13V9H20V15H18V13H16V19H18V17H20V21H22V3H20Z"
              />
            </svg>
          </i>
          <div
            class="item-text white-space-nowrap overflow-hidden text-overflow-ellipsis"
            data-v-1c92b49f=""
          >
            test text
          </div>
          <!--v-if-->
        </div>
        
        <!--teleport start-->
        <!--teleport end-->
        
        
      </div>
      <!---->
    </div>
    <div
      class="v-list-item v-list-item--link v-theme--light v-list-item--density-default rounded-0 v-list-item--variant-text px-3 popover-menu-item rounded overflow-hidden list-item--flex"
      data-v-1c92b49f=""
      style="min-height: 48px;"
      tabindex="0"
    >
      
      <span
        class="v-list-item__overlay"
      />
      <span
        class="v-list-item__underlay"
      />
      
      <!---->
      <div
        class="v-list-item__content"
        data-no-activator=""
      >
        <!---->
        <!---->
        
        
        
        <div
          aria-describedby="v-tooltip-v-1"
          class="d-flex full-width align-center"
          data-v-1c92b49f=""
        >
          <i
            aria-hidden="true"
            class="v-icon notranslate v-theme--light text-red mr-5 item-icon"
            data-v-1c92b49f=""
            style="font-size: 24px; height: 24px; width: 24px;"
          >
            <svg
              aria-hidden="true"
              class="v-icon__svg"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5 5H7V11H5V5M10 5H8V11H10V5M5 19H7V13H5V19M10 13H8V19H10V17H15V15H10V13M2 21H4V3H2V21M20 3V7H13V5H11V11H13V9H20V15H18V13H16V19H18V17H20V21H22V3H20Z"
              />
            </svg>
          </i>
          <div
            class="item-text white-space-nowrap overflow-hidden text-overflow-ellipsis"
            data-v-1c92b49f=""
          >
            test text
          </div>
          <i
            aria-hidden="true"
            class="v-icon notranslate v-theme--light v-icon--size-x-small text-icon-default ml-1"
            data-v-1c92b49f=""
          >
            <svg
              aria-hidden="true"
              class="v-icon__svg"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19,19H5V5H19M19,3H5A2,2 0 0,0 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5A2,2 0 0,0 19,3M13.96,12.29L11.21,15.83L9.25,13.47L6.5,17H17.5L13.96,12.29Z"
              />
            </svg>
          </i>
        </div>
        
        <!--teleport start-->
        <!--teleport end-->
        
        
      </div>
      <!---->
    </div>
    
  </div>
</div>
`;

exports[`ShiftviewPopover > renders correctly in mobile view 1`] = `
<div
  class="shiftview-popover rounded bg-primary-dark pa-4"
  data-v-1c92b49f=""
  style="left: 0px; top: 0px; max-width: 350px;"
>
  <div
    class="d-flex"
    data-v-1c92b49f=""
    id="popover-header"
  >
    <evocon-v-button-stub
      class="my-auto"
      color="white"
      data-v-1c92b49f=""
      disabled="false"
      icon="M15.41,16.58L10.83,12L15.41,7.41L14,6L8,12L14,18L15.41,16.58Z"
      iconcolor=""
      id="left-arrow"
      size="default"
      text=""
      textclass=""
      type="primary"
    />
    <div
      class="mx-3"
      data-v-1c92b49f=""
    >
      <i
        aria-hidden="true"
        class="v-icon notranslate v-theme--light text-purple mr-1"
        data-v-1c92b49f=""
        id="popover-dot"
        style="font-size: 8px; height: 8px; width: 8px;"
      >
        <svg
          aria-hidden="true"
          class="v-icon__svg"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
          />
        </svg>
      </i>
      <span
        class="text-body-small"
        data-v-1c92b49f=""
      >
        <span
          data-v-1c92b49f=""
          id="subtitle"
        >
          popover subtitle
        </span>
      </span>
      <p
        class="mb-0 line-clamp-3 text-body-medium"
        data-v-1c92b49f=""
        id="popover-title"
      >
        <i
          aria-hidden="true"
          class="v-icon notranslate v-theme--light text-icon-default mr-1"
          data-v-1c92b49f=""
          style="font-size: 16px; height: 16px; width: 16px;"
        >
          <svg
            aria-hidden="true"
            class="v-icon__svg"
            role="img"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3.9,12C3.9,10.29 5.29,8.9 7,8.9H11V7H7A5,5 0 0,0 2,12A5,5 0 0,0 7,17H11V15.1H7C5.29,15.1 3.9,13.71 3.9,12M8,13H16V11H8V13M17,7H13V8.9H17C18.71,8.9 20.1,10.29 20.1,12C20.1,13.71 18.71,15.1 17,15.1H13V17H17A5,5 0 0,0 22,12A5,5 0 0,0 17,7Z"
            />
          </svg>
        </i>
         popover title
      </p>
    </div>
    <evocon-v-button-stub
      class="my-auto ml-auto mr-0"
      color="white"
      data-v-1c92b49f=""
      disabled="false"
      icon="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z"
      iconcolor=""
      id="right-arrow"
      size="default"
      text=""
      textclass=""
      type="primary"
    />
  </div>
  
  
  <hr
    aria-orientation="horizontal"
    class="v-divider v-theme--light text-tertiary-dark my-2"
    data-v-1c92b49f=""
    role="separator"
    style="border-style: solid;"
  />
  <div
    class="shifview-popover-actions-list"
    data-v-1c92b49f=""
  >
    
    <div
      class="v-list-item v-list-item--link v-theme--light v-list-item--density-compact rounded-0 v-list-item--variant-text px-3 popover-menu-item rounded overflow-hidden list-item--flex"
      data-v-1c92b49f=""
      style="min-height: 40px;"
      tabindex="0"
    >
      
      <span
        class="v-list-item__overlay"
      />
      <span
        class="v-list-item__underlay"
      />
      
      <!---->
      <div
        class="v-list-item__content"
        data-no-activator=""
      >
        <!---->
        <!---->
        
        
        
        <div
          aria-describedby="v-tooltip-v-0"
          class="d-flex full-width align-center"
          data-v-1c92b49f=""
        >
          <i
            aria-hidden="true"
            class="v-icon notranslate v-theme--light text-red mr-5 item-icon"
            data-v-1c92b49f=""
            style="font-size: 16px; height: 16px; width: 16px;"
          >
            <svg
              aria-hidden="true"
              class="v-icon__svg"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5 5H7V11H5V5M10 5H8V11H10V5M5 19H7V13H5V19M10 13H8V19H10V17H15V15H10V13M2 21H4V3H2V21M20 3V7H13V5H11V11H13V9H20V15H18V13H16V19H18V17H20V21H22V3H20Z"
              />
            </svg>
          </i>
          <div
            class="item-text white-space-nowrap overflow-hidden text-overflow-ellipsis text-body-medium"
            data-v-1c92b49f=""
          >
            test text
          </div>
          <!--v-if-->
        </div>
        
        <!--teleport start-->
        <!--teleport end-->
        
        
      </div>
      <!---->
    </div>
    <div
      class="v-list-item v-list-item--link v-theme--light v-list-item--density-compact rounded-0 v-list-item--variant-text px-3 popover-menu-item rounded overflow-hidden list-item--flex"
      data-v-1c92b49f=""
      style="min-height: 40px;"
      tabindex="0"
    >
      
      <span
        class="v-list-item__overlay"
      />
      <span
        class="v-list-item__underlay"
      />
      
      <!---->
      <div
        class="v-list-item__content"
        data-no-activator=""
      >
        <!---->
        <!---->
        
        
        
        <div
          aria-describedby="v-tooltip-v-1"
          class="d-flex full-width align-center"
          data-v-1c92b49f=""
        >
          <i
            aria-hidden="true"
            class="v-icon notranslate v-theme--light text-red mr-5 item-icon"
            data-v-1c92b49f=""
            style="font-size: 16px; height: 16px; width: 16px;"
          >
            <svg
              aria-hidden="true"
              class="v-icon__svg"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5 5H7V11H5V5M10 5H8V11H10V5M5 19H7V13H5V19M10 13H8V19H10V17H15V15H10V13M2 21H4V3H2V21M20 3V7H13V5H11V11H13V9H20V15H18V13H16V19H18V17H20V21H22V3H20Z"
              />
            </svg>
          </i>
          <div
            class="item-text white-space-nowrap overflow-hidden text-overflow-ellipsis text-body-medium"
            data-v-1c92b49f=""
          >
            test text
          </div>
          <i
            aria-hidden="true"
            class="v-icon notranslate v-theme--light v-icon--size-x-small text-icon-default ml-1"
            data-v-1c92b49f=""
          >
            <svg
              aria-hidden="true"
              class="v-icon__svg"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19,19H5V5H19M19,3H5A2,2 0 0,0 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5A2,2 0 0,0 19,3M13.96,12.29L11.21,15.83L9.25,13.47L6.5,17H17.5L13.96,12.29Z"
              />
            </svg>
          </i>
        </div>
        
        <!--teleport start-->
        <!--teleport end-->
        
        
      </div>
      <!---->
    </div>
    
  </div>
</div>
`;
